--- a/definition.html
+++ b/definition.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Qu’est-ce qu’une cacahuète ?</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Qu'est-ce qu'une cacahuète ?</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Qu’est-ce qu’une cacahuète ?</h1>
-    <button onclick="location.href='index.html'">← Retour à l'accueil</button>
+    <h1>C'est quoi une cacahuète ?</h1>
+    <nav>
+      <button onclick="location.href='index.html'">Retour à l'accueil</button>
+    </nav>
   </header>
 
   <main>
-    <section>
-      <p>
-        La cacahuète, aussi appelée arachide, est une plante légumineuse cultivée pour ses graines comestibles. Contrairement à ce que son nom laisse penser, ce n’est pas une vraie noix, mais plutôt un fruit sec !
-      </p>
-      <p>
-        Elle pousse sous terre, et est riche en protéines, en bonnes graisses et en vitamines. Elle est utilisée dans des produits comme le beurre de cacahuète, l’huile d’arachide, ou tout simplement grillée en apéritif !
-      </p>
+    <section class="definition">
+      <p>La cacahuète (Arachis hypogaea) est une plante cultivée pour ses graines comestibles, souvent appelées arachides. Contrairement à beaucoup d'autres noix, la cacahuète pousse sous terre.</p>
+      <p>Originaire d'Amérique du Sud, elle est cultivée aujourd'hui dans de nombreuses régions chaudes du monde, notamment aux États-Unis, en Afrique, en Inde et en Chine.</p>
+      <p>Elle est utilisée dans de nombreuses préparations culinaires : grillée, bouillie, en beurre de cacahuète, en huile ou encore dans des plats sucrés et salés.</p>
     </section>
   </main>
 </body>
