--- a/frise.html
+++ b/frise.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Frise Chronologique</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Frise Chronologique - Cacahuètes</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>Frise Chronologique des Cacahuètes</h1>
-    <button onclick="location.href='index.html'">← Retour à l'accueil</button>
+    <nav>
+      <button onclick="location.href='index.html'">Retour à l'accueil</button>
+    </nav>
   </header>
 
   <main>
     <section class="timeline">
       <div class="event">
-        <h3>950 av. J.-C.</h3>
-        <p>Les premières traces de cacahuètes sont trouvées au Pérou.</p>
+        <div class="date">3500 av. J.-C.</div>
+        <div class="description">Premières traces de culture de cacahuètes en Amérique du Sud.</div>
       </div>
       <div class="event">
-        <h3>1500</h3>
-        <p>Les explorateurs espagnols ramènent la cacahuète en Europe.</p>
+        <div class="date">XVe siècle</div>
+        <div class="description">Les explorateurs portugais introduisent la cacahuète en Afrique et en Asie.</div>
       </div>
       <div class="event">
-        <h3>1800</h3>
-        <p>Les États-Unis commencent à cultiver la cacahuète à grande échelle.</p>
+        <div class="date">XXe siècle</div>
+        <div class="description">Développement de la culture industrielle aux États-Unis, notamment en Virginie et au Texas.</div>
       </div>
       <div class="event">
-        <h3>1895</h3>
-        <p>Invention du beurre de cacahuète par le Dr. John Harvey Kellogg.</p>
+        <div class="date">1922</div>
+        <div class="description">Invention du beurre de cacahuète commercialisé.</div>
       </div>
       <div class="event">
-        <h3>2025</h3>
-        <p>Création du site encyclo-blog "Le Monde des Cacahuètes" 🎉</p>
+        <div class="date">Années 2000</div>
+        <div class="description">La cacahuète devient un ingrédient clé dans de nombreuses cuisines internationales.</div>
       </div>
     </section>
   </main>
